fix dragging bug on firefox that caused all text to get hightlighted while dragging

--- a/client/src/components/Segment/segment.scss
+++ b/client/src/components/Segment/segment.scss
@@ -57,3 +57,12 @@
 .inserted {
   background-color: $orange;
 }
+
+.noselect {
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
